Emit build item when the effective ServiceAccount name is computed
Signed-off-by: Chris Laprun <claprun@redhat.com>